<resources>
    <string name="app_name">AdvancedApp</string>

    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="button_download">Download</string>
    <string name="view_details">View Details</string>

    <string name="radio_glide">Glide - Image Loading Library By BumpTech</string>
    <string name="radio_downloadApp">LoadApp - Current repository by Udacity</string>
    <string name="radio_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="file_name">File Name:</string>
    <string name="status">Status:</string>
    <string name="ok">Ok</string>
    <string name="select_file_first">Please Select the file to download</string>
    <string name="check_status">Check the status</string>
    <string name="image_for_downloading">Image for downloading</string>

</resources>